Horizontal scroll bar on tables, fixed
- Padding left and right changed to have workspace wider

--- a/css/css_framework/framework.css
+++ b/css/css_framework/framework.css
@@ -41,8 +41,8 @@ body{
 }
 .main-container {
     padding-top: 70px;
-    padding-left: 8%;
-    padding-right: 8%;
+    padding-left: 2%;
+    padding-right: 2%;
     background-color: #fff;
 }
 .container{
